[tool.poetry]
name = "torch-poetry"
version = "1.0.0"
description = "PyTorch and all related dependencies"
authors = ["Ankit Pasi <ankitpasi1@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
transformers = "^4.33.1"
datasets = "^2.14.5"
tokenizers = "^0.13.0"
accelerate = "^0.22.0"
peft = "^0.5.0"
bitsandbytes = "^0.41.1"
einops = "^0.6.1"
sentence-transformers = "^2.2.2"
trl = "^0.7.1"
pandas = "^2.1.0"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
xgboost = "^1.7.6"
catboost = "^1.2.1"
lightgbm = "^4.0.0"
ipykernel = "^6.25.2"
deepspeed = "^0.10.2"
fire = "^0.5.0"
lightning = "^2.0.8"
fastai = "^2.7.12"
spacy = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
